Refactor solver with better types